--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,66 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" >
 
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="fill_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:orientation="horizontal" >
-
-        <ImageButton
-            android:id="@+id/imageButton1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/fillednote" />
-
-        <ImageButton
-            android:id="@+id/imageButton2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/halfnote" />
-    </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="75dp"
-        android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/linearLayout1"
-        android:orientation="vertical" >
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="60dp"
-            android:layout_height="50dp"
-            android:paddingLeft="-30dp"
-            android:src="@drawable/treble" />
-    </RelativeLayout>
-
-    <HorizontalScrollView
-        android:id="@+id/horizontalScrollView1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/linearLayout1"
-        android:layout_toRightOf="@+id/linearLayout2"
-        >
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <TableRow 
-                android:layout_width="30dp"
-                android:layout_height="match_parent">
-            </TableRow>
-            <TableRow 
-                android:layout_width="30dp"
-                android:layout_height="match_parent"
-                  android:paddingTop="-30dp">
-
-            </TableRow>
-        </TableLayout>
-       
-    </HorizontalScrollView>
+   <Button
+       android:layout_width="fill_parent" 
+       android:layout_height="50dp"
+       android:text="@string/editor_name"
+       android:onClick="gotoEditor" />
 
 </RelativeLayout>
