--- a/res/layout/editor_layout.xml
+++ b/res/layout/editor_layout.xml
@@ -8,26 +8,23 @@
 
     <LinearLayout
         android:id="@+id/notesToolBar"
-        android:layout_width="fill_parent"
+        android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:orientation="horizontal" >
-<!-- 
-        <ImageButton
-            android:id="@+id/imageButton1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/fillednote" />
-
-        <ImageButton
-            android:id="@+id/imageButton2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/halfnote" />
-             -->
     </LinearLayout>
 
+    <Spinner
+        android:id="@+id/toolbarSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_toRightOf="@+id/notesToolBar"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:orientation="horizontal"
+        />
+      
         <!--  Time Signature Layout -->
     <RelativeLayout
         android:id="@+id/timeSignatureLayout"
