Changed Editor Activity and Main Activity

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,14 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
-
+    android:orientation="vertical" >
+    
+    <ScrollView
+        android:id="@+id/fileManager"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        >
+    <LinearLayout
+        android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
+        >    
    <Button
-       android:layout_width="fill_parent" 
+       android:id="@+id/newSheet"
+       android:layout_width="match_parent" 
        android:layout_height="50dp"
-       android:text="@string/editor_name"
+       android:text="@string/new_sheet"
        android:onClick="gotoEditor" />
-
-</RelativeLayout>
+   
+ 
+</LinearLayout>
+   
+    </ScrollView>
+    
+</LinearLayout>
