Issue found: media player cannot be created on tablets

--- a/res/layout/editor_layout.xml
+++ b/res/layout/editor_layout.xml
@@ -38,7 +38,7 @@
                 android:id="@+id/forwardMeasure"
                 android:layout_width="35dp"
                 android:layout_height="fill_parent"
-                android:onClick="forward_measure"
+                android:onClick="nextMeasure"
                 android:layout_above="@+id/measureLayout"
                 android:layout_toLeftOf="@+id/notesToolBar"
                 android:src="@drawable/measureforward" />
