--- a/res/layout/editor_layout.xml
+++ b/res/layout/editor_layout.xml
@@ -5,59 +5,58 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" >
 
-    <Button
-        android:id="@+id/playButton"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/top_bar_height"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:onClick="playButtonTouch"
-        android:text="Play!" />
-
-    <ImageView
-        android:id="@+id/backwardMeasure"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/top_bar_height"
-        android:layout_toRightOf="@+id/playButton"
-        android:onClick="previousMeasure"
-        android:src="@drawable/measurebackward" />
-
-    <Spinner
-        android:id="@+id/currentMeasure"
-        android:layout_width="200dp"
-        android:layout_height="@dimen/top_bar_height"
-        android:layout_toRightOf="@+id/backwardMeasure" />
-
-    <ImageView
-        android:id="@+id/forwardMeasure"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/top_bar_height"
-        android:layout_toRightOf="@+id/currentMeasure"
-        android:onClick="nextMeasure"
-        android:src="@drawable/measureforward" />
-
     <LinearLayout
-        android:id="@+id/notesToolBar"
+        android:id="@+id/topToolbar"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/top_bar_height"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/forwardMeasure"
-        android:orientation="horizontal" >
-    </LinearLayout>
+        >
 
-    <Spinner
-        android:id="@+id/toolbarSpinner"
-        android:layout_width="100dp"
-        android:layout_height="@dimen/top_bar_height"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:orientation="horizontal" />
+        <Button
+            android:id="@+id/playButton"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:onClick="playButtonTouch"
+            android:text="Play!" />
+
+        <ImageView
+            android:id="@+id/backwardMeasure"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:onClick="previousMeasure"
+            android:src="@drawable/measurebackward" />
+
+        <Spinner
+            android:id="@+id/currentMeasure"
+            android:layout_width="100dp"
+            android:layout_height="fill_parent" />
+
+        <ImageView
+            android:id="@+id/forwardMeasure"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:onClick="nextMeasure"
+            android:src="@drawable/measureforward" />
+
+        <LinearLayout
+            android:id="@+id/notesToolBar"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:orientation="horizontal" >
+        </LinearLayout>
+
+        <Spinner
+            android:id="@+id/toolbarSpinner"
+            android:layout_width="100dp"
+            android:layout_height="fill_parent"
+            android:orientation="horizontal" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/leftPanel"
         android:layout_width="75dp"
         android:layout_height="match_parent"
-        android:layout_below="@+id/notesToolBar"
+        android:layout_below="@+id/topToolbar"
         android:orientation="vertical" >
 
         <!-- Time Signature Layout -->
@@ -121,7 +120,7 @@
         android:layout_height="fill_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/notesToolBar"
+        android:layout_below="@+id/topToolbar"
         android:layout_toRightOf="@+id/leftPanel"
         android:background="@drawable/background"
         android:orientation="horizontal" >
@@ -916,7 +915,7 @@
         android:id="@+id/NoteLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/notesToolBar"
+        android:layout_below="@+id/topToolbar"
         android:layout_toRightOf="@+id/leftPanel"
         android:orientation="horizontal" >
 
