--- a/res/drawable/measurebackground.xml
+++ b/res/drawable/measurebackground.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <solid android:color="#00000000" />
-   <stroke android:width="4dip" android:color="#3395B5"/>
+       <solid android:color="#00000000" />
+   <stroke android:width="1dip" android:color="#000000"/>
 
 </shape>
