File Manage Working

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,31 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-    <ScrollView
-        android:id="@+id/fileManager"
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        >
-    <LinearLayout
-        android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-        >    
+    
+        
    <Button
        android:id="@+id/newSheet"
        android:layout_width="match_parent" 
-       android:layout_height="50dp"
+       android:layout_height="wrap_content"
+       android:layout_alignParentTop="true"
        android:text="@string/new_sheet"
        android:onClick="newSheet" />
+
+   <ScrollView 
+       android:id="@+id/listofSheetsView"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_below="@+id/newSheet"
+       >
+       <LinearLayout
+                android:id="@+id/listofSheets"
+       			android:layout_width="match_parent"
+       			android:layout_height="wrap_content"
+       			android:orientation="vertical"
+           >
+           
+       </LinearLayout>
+   </ScrollView>
    
- 
-</LinearLayout>
-   
-    </ScrollView>
     
-</LinearLayout>
+</RelativeLayout>
