Added multiple staves and changing clef

--- a/res/layout/editor_layout.xml
+++ b/res/layout/editor_layout.xml
@@ -96,7 +96,34 @@
                 android:layout_width="fill_parent"
                 android:layout_height="50dp"
                 android:layout_below="@+id/timeSignatureLayout"
-                android:src="@drawable/treble" />
+                android:src="@drawable/treble"
+                android:onClick="changeStaff" />
+            <ImageView
+                android:id="@+id/previousStaff"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:src="@drawable/measureforward"
+                android:rotation="270" 
+                android:onClick="previousStaff"/>
+                />
+            <Spinner 
+                android:id="@+id/staffSpinner"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_below="@+id/staffclef"
+                />
+            <ImageView
+                android:id="@+id/nextStaff"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:paddingTop="10dp"
+                android:src="@drawable/measureforward"
+                android:rotation="90" 
+                android:onClick="nextStaff"/>
+                />
+                
 
     </LinearLayout>
 
