--- a/res/layout/editor_layout.xml
+++ b/res/layout/editor_layout.xml
@@ -68,28 +68,24 @@
 
         <!-- Key Signature Layout -->
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/timeSignatureLayout"
             android:layout_width="match_parent"
             android:layout_height="75dp"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/keysignaturemeasure"
             android:orientation="vertical" >
 
             <ImageView
                 android:id="@+id/timesigtop"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:paddingBottom="35dp"
+                android:layout_height="50dp"
                 android:src="@string/timesigtop_file_path" />
 
             <ImageView
                 android:id="@+id/timesigbot"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:paddingTop="35dp"
+                android:layout_height="50dp"
                 android:src="@drawable/four" />
-        </RelativeLayout>
+        </LinearLayout>
 
             <ImageView
                 android:id="@+id/staffclef"
@@ -119,6 +115,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="50dp"
                 android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:src="@drawable/measureforward"
                 android:rotation="90" 
                 android:onClick="nextStaff"/>
