--- a/res/layout/staffoptions_layout.xml
+++ b/res/layout/staffoptions_layout.xml
@@ -5,14 +5,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-    
-    <Button
-        android:id="@+id/editstaffoption"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Edit Current Staff"
-        />
-    
     <Button
         android:id="@+id/changestaffoption"
         android:layout_width="match_parent"
@@ -27,6 +19,14 @@
         android:layout_height="wrap_content"
         android:text="Add New Staff"
         android:onClick="addStaff"
+        />
+    
+    <Button
+        android:id="@+id/deletestaffoption"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Delete Current Staff"
+        android:onClick="deleteStaff"
         />
     
 </LinearLayout>
