Bug Fixes, Delete Signatures Implemented

--- a/res/layout/editor_layout.xml
+++ b/res/layout/editor_layout.xml
@@ -63,11 +63,12 @@
         android:background="@+drawable/topbar"
         >
        
-          <ImageView
+          <ImageButton
                 android:id="@+id/keysignaturemeasure"
                 android:layout_width="fill_parent"
                 android:layout_height="50dp"
-                android:src="@drawable/csignature" />      
+                android:src="@drawable/csignature"
+                android:onClick="alertSignature" />      
 
         <!-- Key Signature Layout -->
 
