--- a/res/layout/signatureoptions_layout.xml
+++ b/res/layout/signatureoptions_layout.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Navigate to Signature"
-        android:onClick="navSig"
+        android:onClick="changeSignature"
         />
     
     <Button
